# ICU

./: .gitignore  README.md  app_test.py  pyproject.toml
icu/database/: db_connect.py  docker-compose.yml
icu/interface/: app.py  multiapp.py
icu/interface/apps/: metrics.py  real_time.py
icu/models/: model_icu_20220404.pt
icu/obj_detect/: detect.py  train.py
icu/obj_detect/data/: habitat.yaml  table.yaml
icu/obj_detect/utils/: plots.py
icu/objet_detection/: detect.py  requirements.txt
icu/services/: alerts.py  simulation.py  yolo_service.py
tests/: test_database.py  test_discord.py  test_icu.py
